# kaiko-take-home-assignment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SOLUTION.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yaml  cicd.yaml  reusable-service-pipeline.yml
libs/utils/: pyproject.toml
libs/utils/src/utils/: __init__.py  logging_config.py  validation.py
scripts/: test_all_packages.py
services/data-processor/: pyproject.toml
services/data_processor/: __init__.py  main.py  pyproject.toml  ruff.toml
services/data_processor/tests/: test_main.py
services/model-service/: pyproject.toml
services/model_service/: __init__.py  main.py  pyproject.toml  ruff.toml
services/model_service/tests/: test_main.py
